--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
     "@types/morgan": "1.9.3",
@@ -17,6 +18,7 @@
     "typescript": "4.6.3"
   },
   "dependencies": {
+    "bcrypt": "5.0.1",
     "express": "4.17.3",
     "express-fileupload": "1.3.1",
     "morgan": "1.10.0",
