--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,11 @@
     "@types/bcrypt": "5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-fileupload": "^1.2.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "1.9.3",
     "@types/node": "17.0.21",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
     "dotenv": "16.0.0",
     "mongoose": "6.2.9",
     "typescript": "4.6.3"
