--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,12 @@
     "@types/morgan": "1.9.3",
     "@types/node": "17.0.21",
     "@types/passport": "^1.0.7",
+    "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "dotenv": "16.0.0",
+    "jwt-decode": "3.1.2",
     "mongoose": "6.2.9",
+    "passport-jwt": "4.0.0",
     "typescript": "4.6.3"
   },
   "dependencies": {
